--- a/Home_Collapsed.html
+++ b/Home_Collapsed.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <script src="https://code.jquery.com/jquery-migrate-3.4.1.js" integrity="sha256-CfQXwuZDtzbBnpa5nhZmga8QAumxkrhOToWweU52T38=" crossorigin="anonymous"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="path/to/flickity.pkgd.min.js"></script>
+
+
+    <link rel="stylesheet" href="./vendor/css/carousel.css">
     <link rel="stylesheet" href="./vendor/css/style.css">
     <title>Maps</title>
 </head>
@@ -107,7 +113,149 @@
                     </div>
 
                     <div class="Home-Collapsed-main-container">
-                        <div class="Home-Collapsed-card-container">
+
+                        <div class="carousel">
+                            <div class="Home-Collapsed-card-container carousel-cell">
+                                <div class="addBusiness-card-box">
+                                    <div class="addBusiness-card-img">
+                                        <img src="./assets/img/image 1.png" alt="">
+                                    </div>
+                                    <h3>Times Square, New York, USA</h3>
+                                    <p>Manhattan, NY 10036, United States</p>
+                                    <p>Plaza</p>
+                                    <hr>
+                                    <div class="addBusiness-card-socail-container">
+                                        <ul>
+                                            <li><img src="./assets/icons/location-orange.svg" alt=""><a
+                                                    href="#">Manhattan,
+                                                    NY
+                                                    10036, United States</a></li>
+                                            <li><img src="./assets/icons/world-orange.svg" alt=""><a
+                                                    href="#">timessquarenyc.org</a></li>
+                                            <li><img src="./assets/icons/phone-orange.svg" alt=""><a
+                                                    href="#">+92300-1234567</a>
+                                            </li>
+                                            <li><img src="./assets/icons/email-orange.svg" alt=""><a
+                                                    href="#">timessquarenyc@gmail.com</a></li>
+                                        </ul>
+                                    </div>
+                                    <button class="Home-Collapsed-vistBusiness-btn">Visit Business</button>
+                                </div>
+                            </div>
+                            <div class="Home-Collapsed-card-container carousel-cell">
+                                <div class="addBusiness-card-box">
+                                    <div class="addBusiness-card-img">
+                                        <img src="./assets/img/image 1.png" alt="">
+                                    </div>
+                                    <h3>Times Square, New York, USA</h3>
+                                    <p>Manhattan, NY 10036, United States</p>
+                                    <p>Plaza</p>
+                                    <hr>
+                                    <div class="addBusiness-card-socail-container">
+                                        <ul>
+                                            <li><img src="./assets/icons/location-orange.svg" alt=""><a
+                                                    href="#">Manhattan,
+                                                    NY
+                                                    10036, United States</a></li>
+                                            <li><img src="./assets/icons/world-orange.svg" alt=""><a
+                                                    href="#">timessquarenyc.org</a></li>
+                                            <li><img src="./assets/icons/phone-orange.svg" alt=""><a
+                                                    href="#">+92300-1234567</a>
+                                            </li>
+                                            <li><img src="./assets/icons/email-orange.svg" alt=""><a
+                                                    href="#">timessquarenyc@gmail.com</a></li>
+                                        </ul>
+                                    </div>
+                                    <button class="Home-Collapsed-vistBusiness-btn">Visit Business</button>
+                                </div>
+                            </div>
+                            <div class="Home-Collapsed-card-container carousel-cell">
+                                <div class="addBusiness-card-box">
+                                    <div class="addBusiness-card-img">
+                                        <img src="./assets/img/image 1.png" alt="">
+                                    </div>
+                                    <h3>Times Square, New York, USA</h3>
+                                    <p>Manhattan, NY 10036, United States</p>
+                                    <p>Plaza</p>
+                                    <hr>
+                                    <div class="addBusiness-card-socail-container">
+                                        <ul>
+                                            <li><img src="./assets/icons/location-orange.svg" alt=""><a
+                                                    href="#">Manhattan,
+                                                    NY
+                                                    10036, United States</a></li>
+                                            <li><img src="./assets/icons/world-orange.svg" alt=""><a
+                                                    href="#">timessquarenyc.org</a></li>
+                                            <li><img src="./assets/icons/phone-orange.svg" alt=""><a
+                                                    href="#">+92300-1234567</a>
+                                            </li>
+                                            <li><img src="./assets/icons/email-orange.svg" alt=""><a
+                                                    href="#">timessquarenyc@gmail.com</a></li>
+                                        </ul>
+                                    </div>
+                                    <button class="Home-Collapsed-vistBusiness-btn">Visit Business</button>
+                                </div>
+                            </div>
+                            <div class="Home-Collapsed-card-container carousel-cell">
+                                <div class="addBusiness-card-box">
+                                    <div class="addBusiness-card-img">
+                                        <img src="./assets/img/image 1.png" alt="">
+                                    </div>
+                                    <h3>Times Square, New York, USA</h3>
+                                    <p>Manhattan, NY 10036, United States</p>
+                                    <p>Plaza</p>
+                                    <hr>
+                                    <div class="addBusiness-card-socail-container">
+                                        <ul>
+                                            <li><img src="./assets/icons/location-orange.svg" alt=""><a
+                                                    href="#">Manhattan,
+                                                    NY
+                                                    10036, United States</a></li>
+                                            <li><img src="./assets/icons/world-orange.svg" alt=""><a
+                                                    href="#">timessquarenyc.org</a></li>
+                                            <li><img src="./assets/icons/phone-orange.svg" alt=""><a
+                                                    href="#">+92300-1234567</a>
+                                            </li>
+                                            <li><img src="./assets/icons/email-orange.svg" alt=""><a
+                                                    href="#">timessquarenyc@gmail.com</a></li>
+                                        </ul>
+                                    </div>
+                                    <button class="Home-Collapsed-vistBusiness-btn">Visit Business</button>
+                                </div>
+                            </div>
+                            <!-- <div class="carousel-cell"><img src="https://emrekaya1.b-cdn.net/p1.jpg" class="p">
+                                <p class="n">Eddie Kinsella</p>
+                                <p class="b">Call</p>
+                                <p class="content"></p>
+                            </div>
+                            <div class="carousel-cell"><img src="https://emrekaya1.b-cdn.net/p2.jpg" class="p">
+                                <p class="n">Harrison Benac</p>
+                                <p class="b">Call</p>
+                            </div>
+                            <div class="carousel-cell"><img src="https://emrekaya1.b-cdn.net/p3.jpg" class="p">
+                                <p class="n">Sean Kingston</p>
+                                <p class="b">Call</p>
+                            </div>
+                            <div class="carousel-cell"><img src="https://emrekaya1.b-cdn.net/p4.jpg" class="p">
+                                <p class="n">Hayden Kaupu</p>
+                                <p class="b">Call</p>
+                            </div>
+                            <div class="carousel-cell"><img src="https://emrekaya1.b-cdn.net/p5.jpg" class="p">
+                                <p class="n">Franklin Tudor</p>
+                                <p class="b">Call</p>
+                            </div>
+                            <div class="carousel-cell"><img src="https://emrekaya1.b-cdn.net/p6.jpg" class="p">
+                                <p class="n">Herbert Simpson</p>
+                                <p class="b">Call</p>
+                            </div>
+                            <div class="carousel-cell"><img src="https://emrekaya1.b-cdn.net/p7.jpg" class="p">
+                                <p class="n">Shaun Coleman</p>
+                                <p class="b">Call</p>
+                            </div> -->
+                        </div>
+
+
+                        <!-- <div class="Home-Collapsed-card-container">
                             <div class="addBusiness-card-box">
                                 <div class="addBusiness-card-img">
                                     <img src="./assets/img/image 1.png" alt="">
@@ -132,7 +280,7 @@
                                 </div>
                                 <button class="Home-Collapsed-vistBusiness-btn">Visit Business</button>
                             </div>
-                        </div>
+                        </div> -->
                         <!--  -->
                         <div class="Home-Collapsed-featuredBusiness-conatiner">
                             <h3>Featured Businesses</h3>
@@ -240,6 +388,7 @@
         </div>
     </div>
     <!-- Scripts -->
+    <script src="./vendor/js/flickity.js"></script>
     <script src="./vendor/js/carousel.js"></script>
     <script src="./vendor/js/app.js"></script>
 
