--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 
 <body>
     <div class="site-main-container">
-        <iframe
+        <div id="map"></div>
+        <!-- <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d834511.5061169196!2d-105.02742570039946!3d35.211187128823184!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87185043e79852a9%3A0x46bf6e1a63359eba!2sNew%20Mexico%2C%20USA!5e0!3m2!1sen!2s!4v1688890072315!5m2!1sen!2s"
             width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+            referrerpolicy="no-referrer-when-downgrade"></iframe> -->
         <div class="site-main-inner-container">
             <div class="main-leftbar-container">
                 <img src="./assets/logo.svg" alt="">
@@ -130,12 +131,12 @@
         </div>
     </div>
     <!-- Scripts -->
+    <script src="https://maps.googleapis.com/maps/api/js?"></script>
     <script>
         function initMap() {
-            var location = { lat: -25.363, lng: 131.044 }
             var map = new google.maps.Map(document.getElementById("map"), {
-                zoom: 4,
-                center: location
+                zoom: 15,
+                center: { lat: 37.7749, lng: -122.4194 }
             });
         }
     </script>
