--- a/Comparison_States.html
+++ b/Comparison_States.html
@@ -4,6 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+        google.charts.load('current', { 'packages': ['bar'] });
+        google.charts.setOnLoadCallback(drawChart);
+
+        function drawChart() {
+            var data = google.visualization.arrayToDataTable([
+                ['Year', 'Sales', 'Expenses', 'Profit'],
+                ['2014', 1000, 400, 200],
+                ['2015', 1170, 460, 250],
+                ['2016', 660, 1120, 300],
+                ['2017', 1030, 540, 350]
+            ]);
+
+            var options = {
+                chart: {
+                    title: 'Company Performance',
+                    subtitle: 'Sales, Expenses, and Profit: 2014-2017',
+                },
+                colors: ['#000000', '#FD961B', '#be761d'] // Specify your desired colors here
+            };
+
+            var chart = new google.charts.Bar(document.getElementById('columnchart_material'));
+
+            chart.draw(data, google.charts.Bar.convertOptions(options));
+        }
+    </script>
     <link rel="stylesheet" href="./vendor/css/style.css">
     <title>Maps</title>
 </head>
@@ -75,10 +102,47 @@
                 </div>
                 <div class="ComparisonStates-rating-detail-container">
                     <div class="ComparisonStates-rating-detail-box">
-                        <h3>Ratings</h3> 
-                        <!-- <div class="ComparisonStates-halfRing-container"></div> -->
+                        <h3>Ratings</h3>
                         <!-- <div class="half-circle"></div> -->
-                        
+                        <!-- <svg width="300" height="150" viewBox="0 0 300 150" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M284 150C292.837 150 300.088 142.816 299.148 134.029C295.518 100.118 280.406 68.2743 256.066 43.934C227.936 15.8035 189.782 3.00349e-06 150 0C110.218 -3.00349e-06 72.0645 15.8035 43.934 43.934C19.5936 68.2743 4.4823 100.118 0.852145 134.029C-0.088437 142.816 7.16344 150 16 150H74C82.8366 150 89.7918 142.713 92.1207 134.188C94.8467 124.211 100.132 115.015 107.574 107.574C118.826 96.3214 134.087 90 150 90C165.913 90 181.174 96.3214 192.426 107.574C199.868 115.015 205.153 124.211 207.879 134.188C210.208 142.713 217.163 150 226 150H284Z"
+                                fill="#E0E0E0" />
+                        </svg>
+                        <svg width="230" height="150" viewBox="0 0 230 150" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M227.065 40.3777C232.147 33.1487 230.44 23.0848 222.711 18.8013C203.554 8.18394 182.242 1.85861 160.261 0.351397C132.943 -1.52184 105.632 4.11879 81.291 16.6618C56.9497 29.2048 36.5063 48.1716 22.1771 71.5061C10.6477 90.281 3.43044 111.307 0.958372 133.07C-0.0389525 141.85 7.1664 149.081 16.0028 149.138L74.0016 149.511C82.838 149.568 89.8403 142.326 92.2237 133.817C93.7168 128.486 95.9472 123.363 98.8708 118.602C104.603 109.269 112.78 101.682 122.516 96.6647C132.253 91.6475 143.177 89.3913 154.105 90.1406C159.678 90.5228 165.145 91.6795 170.352 93.5572C178.665 96.5545 188.626 95.0551 193.708 87.8261L227.065 40.3777Z"
+                                fill="#000100" />
+                        </svg> -->
+                        <div class="ComparisonStates-halfRing-container">
+                            <h5>KFC</h5>
+                            <svg width="300" height="150" viewBox="0 0 300 150" xmlns="http://www.w3.org/2000/svg">
+                                <!-- Gray SVG -->
+                                <path
+                                    d="M284 150C292.837 150 300.088 142.816 299.148 134.029C295.518 100.118 280.406 68.2743 256.066 43.934C227.936 15.8035 189.782 3.00349e-06 150 0C110.218 -3.00349e-06 72.0645 15.8035 43.934 43.934C19.5936 68.2743 4.4823 100.118 0.852145 134.029C-0.088437 142.816 7.16344 150 16 150H74C82.8366 150 89.7918 142.713 92.1207 134.188C94.8467 124.211 100.132 115.015 107.574 107.574C118.826 96.3214 134.087 90 150 90C165.913 90 181.174 96.3214 192.426 107.574C199.868 115.015 205.153 124.211 207.879 134.188C210.208 142.713 217.163 150 226 150H284"
+                                    fill="#E0E0E0" />
+
+                                <!-- Black SVG (on top) -->
+                                <path
+                                    d="M227.065 40.3777C232.147 33.1487 230.44 23.0848 222.711 18.8013C203.554 8.18394 182.242 1.85861 160.261 0.351397C132.943 -1.52184 105.632 4.11879 81.291 16.6618C56.9497 29.2048 36.5063 48.1716 22.1771 71.5061C10.6477 90.281 3.43044 111.307 0.958372 133.07C-0.0389525 141.85 7.1664 149.081 16.0028 149.138L74.0016 149.511C82.838 149.568 89.8403 142.326 92.2237 133.817C93.7168 128.486 95.9472 123.363 98.8708 118.602C104.603 109.269 112.78 101.682 122.516 96.6647C132.253 91.6475 143.177 89.3913 154.105 90.1406C159.678 90.5228 165.145 91.6795 170.352 93.5572C178.665 96.5545 188.626 95.0551 193.708 87.8261L227.065 40.3777Z"
+                                    fill="#000100" />
+                            </svg>
+                            <span class="ComparisonStates-rate-span">3.7</span>
+                            <div class="ComparisonStates-ratingStar-conatiner">
+                                <img src="./assets/icons/star.svg" alt="">
+                                <img src="./assets/icons/star.svg" alt="">
+                                <img src="./assets/icons/star.svg" alt="">
+                                <img src="./assets/icons/star-half.svg" alt="">
+                                <img src="./assets/icons/star-empty.svg" alt="">
+                            </div>
+                            <span class="ComparisonStates-review">(1000 Reviews) </span>
+                        </div>
+
+
+
+
                     </div>
                     <div class="ComparisonStates-rating-detail-box">
                         <div class="ComparisonStates-totolCustomers-detail">
@@ -97,6 +161,12 @@
                             <span class="ComparisonStates-available-item">5K</span>
                         </div>
                     </div>
+                </div>
+                <div class="ComparisonStates-graph-container">
+                    <h5>KFC vs St. Joseph Hospital</h5>
+                    <!-- <div class="ComparisonStates-graph-main-container"></div> -->
+                    <div id="columnchart_material" class="ComparisonStates-graph-main-container"
+                        style="width: 100%; height: 500px;"></div>
                 </div>
             </div>
         </div>
