--- a/Home_Collapsed.html
+++ b/Home_Collapsed.html
@@ -16,11 +16,9 @@
 
 <body>
     <div class="site-main-container">
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d834511.5061169196!2d-105.02742570039946!3d35.211187128823184!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87185043e79852a9%3A0x46bf6e1a63359eba!2sNew%20Mexico%2C%20USA!5e0!3m2!1sen!2s!4v1688890072315!5m2!1sen!2s"
-            width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <div class="site-main-inner-container">
+        <div id="map"></div>
+
+        <div class="site-main-inner-container-new">
             <div class="main-leftbar-container">
                 <img src="./assets/logo.svg" alt="">
                 <ul>
@@ -223,65 +221,7 @@
                                     <button class="Home-Collapsed-vistBusiness-btn">Visit Business</button>
                                 </div>
                             </div>
-                            <!-- <div class="carousel-cell"><img src="https://emrekaya1.b-cdn.net/p1.jpg" class="p">
-                                <p class="n">Eddie Kinsella</p>
-                                <p class="b">Call</p>
-                                <p class="content"></p>
-                            </div>
-                            <div class="carousel-cell"><img src="https://emrekaya1.b-cdn.net/p2.jpg" class="p">
-                                <p class="n">Harrison Benac</p>
-                                <p class="b">Call</p>
-                            </div>
-                            <div class="carousel-cell"><img src="https://emrekaya1.b-cdn.net/p3.jpg" class="p">
-                                <p class="n">Sean Kingston</p>
-                                <p class="b">Call</p>
-                            </div>
-                            <div class="carousel-cell"><img src="https://emrekaya1.b-cdn.net/p4.jpg" class="p">
-                                <p class="n">Hayden Kaupu</p>
-                                <p class="b">Call</p>
-                            </div>
-                            <div class="carousel-cell"><img src="https://emrekaya1.b-cdn.net/p5.jpg" class="p">
-                                <p class="n">Franklin Tudor</p>
-                                <p class="b">Call</p>
-                            </div>
-                            <div class="carousel-cell"><img src="https://emrekaya1.b-cdn.net/p6.jpg" class="p">
-                                <p class="n">Herbert Simpson</p>
-                                <p class="b">Call</p>
-                            </div>
-                            <div class="carousel-cell"><img src="https://emrekaya1.b-cdn.net/p7.jpg" class="p">
-                                <p class="n">Shaun Coleman</p>
-                                <p class="b">Call</p>
-                            </div> -->
                         </div>
-
-
-                        <!-- <div class="Home-Collapsed-card-container">
-                            <div class="addBusiness-card-box">
-                                <div class="addBusiness-card-img">
-                                    <img src="./assets/img/image 1.png" alt="">
-                                </div>
-                                <h3>Times Square, New York, USA</h3>
-                                <p>Manhattan, NY 10036, United States</p>
-                                <p>Plaza</p>
-                                <hr>
-                                <div class="addBusiness-card-socail-container">
-                                    <ul>
-                                        <li><img src="./assets/icons/location-orange.svg" alt=""><a href="#">Manhattan,
-                                                NY
-                                                10036, United States</a></li>
-                                        <li><img src="./assets/icons/world-orange.svg" alt=""><a
-                                                href="#">timessquarenyc.org</a></li>
-                                        <li><img src="./assets/icons/phone-orange.svg" alt=""><a
-                                                href="#">+92300-1234567</a>
-                                        </li>
-                                        <li><img src="./assets/icons/email-orange.svg" alt=""><a
-                                                href="#">timessquarenyc@gmail.com</a></li>
-                                    </ul>
-                                </div>
-                                <button class="Home-Collapsed-vistBusiness-btn">Visit Business</button>
-                            </div>
-                        </div> -->
-                        <!--  -->
                         <div class="Home-Collapsed-featuredBusiness-conatiner">
                             <h3>Featured Businesses</h3>
                             <a href="">
@@ -388,6 +328,10 @@
         </div>
     </div>
     <!-- Scripts -->
+    <!-- prettier-ignore -->
+    <script>(g => { var h, a, k, p = "The Google Maps JavaScript API", c = "google", l = "importLibrary", q = "__ib__", m = document, b = window; b = b[c] || (b[c] = {}); var d = b.maps || (b.maps = {}), r = new Set, e = new URLSearchParams, u = () => h || (h = new Promise(async (f, n) => { await (a = m.createElement("script")); e.set("libraries", [...r] + ""); for (k in g) e.set(k.replace(/[A-Z]/g, t => "_" + t[0].toLowerCase()), g[k]); e.set("callback", c + ".maps." + q); a.src = `https://maps.${c}apis.com/maps/api/js?` + e; d[q] = f; a.onerror = () => h = n(Error(p + " could not load.")); a.nonce = m.querySelector("script[nonce]")?.nonce || ""; m.head.append(a) })); d[l] ? console.warn(p + " only loads once. Ignoring:", g) : d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)) })
+            ({ key: "AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg", v: "weekly" });</script>
+    <script src="./vendor/js/map.js"></script>
     <script src="./vendor/js/flickity.js"></script>
     <script src="./vendor/js/carousel.js"></script>
     <script src="./vendor/js/app.js"></script>
