--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
 <body>
     <div class="site-main-container">
         <div id="map"></div>
-        <!-- <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d834511.5061169196!2d-105.02742570039946!3d35.211187128823184!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87185043e79852a9%3A0x46bf6e1a63359eba!2sNew%20Mexico%2C%20USA!5e0!3m2!1sen!2s!4v1688890072315!5m2!1sen!2s"
-            width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe> -->
-        <div class="site-main-inner-container">
+
+        <div class="site-main-inner-container-new">
             <div class="main-leftbar-container">
                 <img src="./assets/logo.svg" alt="">
                 <ul>
@@ -62,30 +59,7 @@
                     <img src="./assets/icons/user-login.svg" alt="">
                     <span id="loginButton">Login</span>
                 </a>
-                <div id="container" class="main-login-container hidden">
-                    <img src="./assets/icons/cross.svg" class="login-cross" alt="">
-                    <div class="login-container">
-                        <div class="login-section-center">
-                            <div class="login-brand-logo-container">
-                                <img src="./assets/logo.svg" alt="">
-                                <h2>Locator</h2>
-                            </div>
-                            <h3>Welcome Back!</h3>
-                            <h4>Login to your Account</h4>
-                            <div class="login-input-container">
-                                <input type="text" placeholder="Email Address">
-                                <input type="password" placeholder="Password">
-                            </div>
-                            <div class="container-login">
-                                <button class="btn-login">Login</button>
-                                <button class="btn-login-gmail"><img src="./assets/icons/google.svg" alt=""><span>Login
-                                        with
-                                        Google</span></button>
-                                <p>New to Locator? <a href="#">Create New Account</a></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                
             </div>
             <!-- Search Filter container -->
             <div class="main-Home-Collapsed-searchFilter-container">
@@ -131,15 +105,10 @@
         </div>
     </div>
     <!-- Scripts -->
-    <script src="https://maps.googleapis.com/maps/api/js?"></script>
-    <script>
-        function initMap() {
-            var map = new google.maps.Map(document.getElementById("map"), {
-                zoom: 15,
-                center: { lat: 37.7749, lng: -122.4194 }
-            });
-        }
-    </script>
+    <!-- prettier-ignore -->
+    <script>(g => { var h, a, k, p = "The Google Maps JavaScript API", c = "google", l = "importLibrary", q = "__ib__", m = document, b = window; b = b[c] || (b[c] = {}); var d = b.maps || (b.maps = {}), r = new Set, e = new URLSearchParams, u = () => h || (h = new Promise(async (f, n) => { await (a = m.createElement("script")); e.set("libraries", [...r] + ""); for (k in g) e.set(k.replace(/[A-Z]/g, t => "_" + t[0].toLowerCase()), g[k]); e.set("callback", c + ".maps." + q); a.src = `https://maps.${c}apis.com/maps/api/js?` + e; d[q] = f; a.onerror = () => h = n(Error(p + " could not load.")); a.nonce = m.querySelector("script[nonce]")?.nonce || ""; m.head.append(a) })); d[l] ? console.warn(p + " only loads once. Ignoring:", g) : d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)) })
+            ({ key: "AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg", v: "weekly" });</script>
+    <script src="./vendor/js/map.js"></script>
     <script src="./vendor/js/app.js"></script>
 
 </body>
