--- a/AddBusinessLocation.html
+++ b/AddBusinessLocation.html
@@ -71,6 +71,7 @@
                         <input type="text" placeholder="Business Name">
                         <input type="text" placeholder="Business Address">
                         <div class="addLocationProduct-dropdown addBusinessLocation-dropdown">
+                            <input type="text" style="display: none;" id="firstDropdownValue" placeholder="first Dropdown Value">
                             <div class="addLocationProduct-toggle addBusinessLocation-toggle"
                                 onclick="addLocationProducttoggleDropdown()">
                                 Select Category <span class="addLocationProduct-arrow addBusinessLocation-arrow"></span>
@@ -123,7 +124,8 @@
                             <div class="addBusiness-addItem-porfolio"><img src="./assets/icons/plus-black.svg"
                                     alt="">Add Items</div>
                         </div>
-                        <a href="addLocationCoordinates.html" class="statsPage-next-btn Submit-Business-Location-btn">Submit Your Business
+                        <a href="addLocationCoordinates.html"
+                            class="statsPage-next-btn Submit-Business-Location-btn">Submit Your Business
                             Location<img src="./assets/icons/right-arrow.svg" alt=""></a>
                     </div>
                     <div class="addBusiness-card-container">
